removed myapp from the url, completed registration with a landing page and email sent through rthockeybc@gmail.com

--- a/myproject/myapp/templates/myapp/contact.html
+++ b/myproject/myapp/templates/myapp/contact.html
@@ -4,7 +4,7 @@
         </div>
         <div id="main" class="container">
             <div class="outlined_normal" id="article">
-                <p>Robert Thompson is the owner and head trainer for RT Hockey.</p>
+                <p>Rob Thompson is the owner and head trainer for RT Hockey.</p>
                 <img src="/static/myapp/rob.png" alt="Rob">
                 <h3>Contact</h3>
                 <div class="row">
