--- a/myproject/myapp/templates/myapp/index.html
+++ b/myproject/myapp/templates/myapp/index.html
@@ -16,5 +16,8 @@
                 <li>Learn-to-Skate</li>
                 </ul>
             </div>
+            <div class="mini-slideshow">
+                {% include "myapp/slideshow.html" %}
+            </div>
         </div> <!-- /main -->
 {% include "myapp/footer.html" %}
