--- a/myproject/myapp/static/myapp/style.css
+++ b/myproject/myapp/static/myapp/style.css
@@ -189,6 +189,16 @@ div.row{
     margin-left:auto;
     margin-right:auto;
     max-height:700px;
+    /*max-width:100%;*/
+    /*max-height:100%;*/
+}
+
+/* prototype slideshow on homepage */
+.mini-slideshow .item{
+    height:400px;
+    width:600px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 /* registration form */
