--- a/myproject/myapp/templates/includes/tabs.html
+++ b/myproject/myapp/templates/includes/tabs.html
@@ -1,7 +1,7 @@
 <ul class="tab-menu">
-    <li class="{% if active_tab == 'tab1' %} selected{% endif %}"><a href="/myapp/">Home</a></li>
-    <li class="{% if active_tab == 'tab2' %} selected{% endif %}"><a href="/myapp/programs">Register</a></li> 
-    <li class="{% if active_tab == 'tab3' %} selected{% endif %}"><a href="/myapp/gallery">Gallery</a></li>
-    <!--li class="{% if active_tab == 'tab4' %} selected{% endif %}"><a href="/myapp/about">About</a></li-->
-    <li class="{% if active_tab == 'tab4' %} selected{% endif %}"><a href="/myapp/contact">Contact</a></li>
+    <li class="{% if active_tab == 'tab1' %} selected{% endif %}"><a href="/">Home</a></li>
+    <li class="{% if active_tab == 'tab2' %} selected{% endif %}"><a href="/programs">Programs</a></li> 
+    <li class="{% if active_tab == 'tab3' %} selected{% endif %}"><a href="/gallery">Gallery</a></li>
+    <!--li class="{% if active_tab == 'tab4' %} selected{% endif %}"><a href="/about">About</a></li-->
+    <li class="{% if active_tab == 'tab4' %} selected{% endif %}"><a href="/contact">Contact</a></li>
 </ul>
